 Bug 471493 -  crash [@ nsPropertyTable::GetPropertyInternal], r=marcoz, davidb, rcampbell